<resources>
    <string name="app_name">糗事百科</string>

    <string name="ic_qiushi">糗事</string>
    <string name="ic_qiuyoucircle">糗友圈</string>
    <string name="ic_nearby">发现</string>
    <string name="ic_message">小纸条</string>
    <string name="ic_mine">我</string>
    <string name="tip_back_pressed">再次按下返回键退出</string>

    <string-array name="qiushi_menu">
        <item>专享</item>
        <item>视频</item>
        <item>纯文</item>
        <item>纯图</item>
        <item>精华</item>
    </string-array>
</resources>
