<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/btn_ic_qiushi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:src="@drawable/ic_qiushi_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="3dp"
            android:duplicateParentState="true"
            android:textColor="@drawable/ic_bottom_text_selector"
            android:textSize="@dimen/ic_text_size"
            android:text="@string/ic_qiushi" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_ic_qiuyoucircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:src="@drawable/ic_qiuyoucircle_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="3dp"
            android:duplicateParentState="true"
            android:textColor="@drawable/ic_bottom_text_selector"
            android:textSize="@dimen/ic_text_size"
            android:text="@string/ic_qiuyoucircle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_ic_nearby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:src="@drawable/ic_nearby_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="3dp"
            android:duplicateParentState="true"
            android:textColor="@drawable/ic_bottom_text_selector"
            android:textSize="@dimen/ic_text_size"
            android:text="@string/ic_nearby" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_ic_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:src="@drawable/ic_message_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="3dp"
            android:duplicateParentState="true"
            android:textColor="@drawable/ic_bottom_text_selector"
            android:textSize="@dimen/ic_text_size"
            android:text="@string/ic_message" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/btn_ic_mine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:layout_marginTop="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:duplicateParentState="true"
            android:src="@drawable/ic_mine_selector" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-4dp"
            android:layout_marginBottom="3dp"
            android:duplicateParentState="true"
            android:textColor="@drawable/ic_bottom_text_selector"
            android:textSize="@dimen/ic_text_size"
            android:text="@string/ic_mine" />
    </LinearLayout>
</LinearLayout>